--- a/carrentalsystem/crcapp/templates/index.html
+++ b/carrentalsystem/crcapp/templates/index.html
@@ -56,7 +56,7 @@
                       <a class="nav-link" href="/login">Login</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/register">New user? Register</a>
+                      <a class="nav-link" href="/signup">New user? Sign up</a>
                   </li>
               </ul>
           </div>
@@ -106,7 +106,13 @@
        });
        $("#pickupStore").select2();
        $("#returnStore").select2();
+
+
+ 
          </script>
+         {% block scripts %}
+
+         {% endblock %}
   </body>
 
 </html>
