--- a/carrentalsystem/crcapp/static/css/publicstyles.css
+++ b/carrentalsystem/crcapp/static/css/publicstyles.css
@@ -43,3 +43,21 @@
   flex: 1 1 0 !important;
   flex-wrap: nowrap !important;
 }
+
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+  color: #555;
+  cursor: default;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
+  padding:5px;
+}
+
+.nav-tabs>li>a {
+  margin-right: 2px;
+  line-height: 1.42857143;
+  border: 1px solid transparent;
+  border-radius: 4px 4px 0 0;
+  padding:5px;
+}
